# axiom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  genesis.json
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  fuzz.yml
api/: Cargo.toml
api/src/: lib.rs
api/tests/: api_test.rs
consensus/: Cargo.toml
consensus/src/: bft.rs  lib.rs
consensus/tests/: v2_bft_test.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: API.md  API_v2.md  CODING_RULES.md  CONFIG.md  GENESIS.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  LOCAL_TESTNET_v2.md  OPERATOR.md  PRINCIPLES.md  PROTOCOL_V2_IMPLEMENTATION_PLAN.md  PROTOCOL_v1.md  PROTOCOL_v2.md  RELEASE_NOTES_V1.0.0.md  TEST_VECTORS.md  TEST_VECTORS_v2.md
execution/: Cargo.toml
execution/src/: lib.rs
execution/tests/: v2_vectors_test.rs
fixtures/: reference_genesis.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: network_message.rs  transaction_json.rs
mempool/: Cargo.toml
mempool/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
network/tests/: network_test.rs
node/: Cargo.toml
node/src/: config.rs  genesis.rs  lib.rs  main.rs  node.rs
node/tests/: node_test.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
scripts/: axiom.service  build_release.ps1  build_release.sh  deploy.sh  genesis_ceremony.sh  proxy.py  run_local_testnet.ps1  run_local_testnet.sh  smoke_v2_testnet.ps1  soak_restart_v2.ps1
state/: Cargo.toml
state/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/tests/: api_coverage_test.rs  persistence_test.rs  staking_storage.rs  vectors_replay.rs
tools/fast-forward/: Cargo.toml
tools/fast-forward/src/: main.rs
tools/genesis-tool/: Cargo.toml
tools/genesis-tool/src/: main.rs
tools/test-vector-gen/: Cargo.toml
tools/test-vector-gen/src/: main.rs
tools/tx-generator/: Cargo.toml
tools/tx-generator/src/: main.rs
web/: accounts.html  app.js  block.html  blocks.html  index.html  login.html  staking.html  styles.css  tx.html  validators.html
