[workspace]
resolver = "2"
members = [
    "primitives",
    "crypto",
    "state",
    "execution",
    "consensus",
    "mempool",
    "storage",
    "network",
    "api",
    "node",
    "tools/genesis-tool",
    "tools/fast-forward",
    "tools/test-vector-gen",
]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
