[package]
name = "axiom-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1.3"
serde_json = "1.0"

axiom-network = { path = "../network" }
axiom-primitives = { path = "../primitives" }

[[bin]]
name = "network_message"
path = "fuzz_targets/network_message.rs"

[[bin]]
name = "transaction_json"
path = "fuzz_targets/transaction_json.rs"
