[package]
name = "axiom-network"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-primitives = { path = "../primitives" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
tracing = "0.1"
futures = "0.3"
