[package]
name = "axiom-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-crypto = { version = "0.1.0", path = "../crypto" }
axiom-primitives = { path = "../primitives" }
axiom-state = { path = "../state" }
chrono = "0.4.43"
hex = "0.4.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
[dev-dependencies]
tempfile = "3.3"
axiom-execution = { path = "../execution" }

