[package]
name = "genesis-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-primitives = { path = "../../primitives" }
axiom-crypto = { path = "../../crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
