[package]
name = "tx-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-primitives = { path = "../../primitives" }
axiom-crypto     = { path = "../../crypto" }
clap             = { version = "4.4", features = ["derive"] }
hex              = "0.4"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", features = ["json"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek    = { version = "2.1", features = ["rand_core"] }
